--- a/NewDaviznProject/.settings/org.eclipse.wst.common.component
+++ b/NewDaviznProject/.settings/org.eclipse.wst.common.component
@@ -6,6 +6,6 @@
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
 		<property name="java-output-path" value="target/classes"/>
-        <property name="context-root" value="Davizn"/>
+        <property name="context-root" value="NewDaviznProject"/>
 	</wb-module>
 </project-modules>
